# VINA

./: README.md
backend/: .dockerignore  .gitignore  READM.md  README.md  docker-compose.yaml  start_VINA.sh
backend/article-scrapper/: article.py  database.py  db_cleanup_service.sh  main.py  pipeline.py  scrapper.py
backend/database/: Dockerfile  README.md  init.cjs  init.js  package-lock.json  package.json  schema.json
backend/news-scrapper/: .gitignore  Dockerfile  article.py  database.py  main.py  newspapers.txt  requirements.txt  scrapper.py
backend/rss-scrapper/: .gitignore  go.mod  main.go
backend/vina-server/: Cargo.toml  Dockerfile
backend/vina-server-rs/: Cargo.toml
backend/vina-server-rs/src/: main.rs  tests.rs
backend/vina-server-rs/src/apis/: articles.rs  mod.rs
backend/vina-server-rs/src/interfaces/: database.rs
backend/vina-server-rs/src/models/: article.rs
backend/vina-server/public/: index.html  script.js  style.css
backend/vina-server/src/: main.rs  tests.rs
backend/vina-server/src/apis/: articles.rs  authentication.rs  healthz.rs  mod.rs  news.rs
backend/vina-server/src/interfaces/: database.rs  mod.rs
frontend/VINA/: Constants.swift
frontend/VINA.xcodeproj/: project.pbxproj
frontend/VINA/Models/: Article.swift  ArticleStore.swift
frontend/VINA/Services/: NetworkClient.swift
frontend/VINA/Views/: ArticleView.swift  Background.swift  NewsSheetView.swift  SettingsView.swift
iOS/VINA/: VINAApp.swift
macOS/: README.md
macOS/VINA/: Constants.swift  VINAApp.swift
macOS/VINA.xcodeproj/: project.pbxproj
(+17 files in other folders)
